--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.7.0"
+    "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
