--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
         run: |
-          npm ci
+          pnpm install --frozen-lockfile
           npm run build --if-present
-          npm test      
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
