--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           pnpm install
           pnpm run build
           cp -a dist/. public/
-        
+
       - name: Save public
         uses: actions/upload-artifact@v3
         with:
@@ -56,17 +56,13 @@ jobs:
           path: public
 
   deploy:
+    runs-on: ubuntu-latest
+
     needs: build
 
-    permissions: write
-    id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    runs-on: ubuntu-latest
     steps:
       - name: Deploy to Github Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./dist
