--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,13 +53,15 @@ jobs:
           path: public
 
   deploy:
-    runs-on: ubuntu-latest
-
     needs: build
 
+    runs-on: ubuntu-latest
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
-      - name: Deploy to Github Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./dist
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
