--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "deploy": "pnpm run build && gh-pages -d dist" 
+    "deploy": "pnpm run build && gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -17,19 +17,20 @@
     ]
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.0.1",
+    "@types/node": "^18.16.18",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^5.0.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4"
+    "styled-components": "6.0.0-rc.3",
+    "typescript": "^4.9.5",
+    "vite": "^4.3.9"
   },
   "browserslist": {
     "production": [
